fix: Made images responsive on mobile

--- a/style.css
+++ b/style.css
@@ -47,16 +47,6 @@ nav .current a{
   flex-wrap: wrap;
 }
 
-
-.poster {
-  position: relative;
-  width: 100%;
-  max-width: 220px;
-  height: 333px;
-  max-height: 320px;
-  margin: 25px;
-}
-
 .img{
   display: flex;
   border-radius: 10px;
@@ -65,7 +55,7 @@ nav .current a{
   width: 100%;
   height: 100%;
   background-size: cover;
-  margin: 40% 0 15% 0; 
+  margin: 70px 0 15% 0; 
 }
 
 .div-height{
